Added header and navigation box

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -18,25 +18,19 @@
                       <a><li>  Contact </li></a>
 
                   </ul>
+
               </div>
+
           </div>
        </div>
 
-       <div> 
-           <p> I am  a software engineering student at Ecole Polytechnique de Montreal</p>
-
-        
-             <i class="fas fa-cloud"></i>         
-
-       </div>
-
-    <!-- <div id="content">
+    <div id="content">
       <h1>My Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
-    </div> -->
+    </div>
 
     <footer>
      <p>Author: Hanane ikhelef<br>
