Add images to the welcome page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Hanane ikhelef</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -10,13 +10,11 @@
       <div class="header"> 
           <div class="inner_header">
               <div class="logo_container"> 
-                  <h1> MY <span> PORTFOLIO</span></h1>
-
+                  <h1> <span> Welcome </span></h1>
                   <ul class="navigation"> 
                       <a href= "index.html"><li>  About </li></a>
                       <a href= "projects.html"><li>  Projects </li></a>
                       <a><li>  Contact </li></a>
-
                   </ul>
               </div>
           </div>
@@ -24,19 +22,8 @@
 
        <div> 
            <p> I am  a software engineering student at Ecole Polytechnique de Montreal</p>
-
-        
-             <i class="fas fa-cloud"></i>         
-
+           <img src="/images/hanane.jpeg" alt="Trulli" >
        </div>
-
-    <!-- <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
-    </div> -->
 
     <footer>
      <p>Author: Hanane ikhelef<br>
