Add project.html page

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -20,6 +20,10 @@
           </div>
        </div>
 
+      <div id="content"> 
+           <p> Projects Page </p>
+      </div>
+
     <footer>
      <p>Author: Hanane ikhelef<br>
         <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a></p>
