Remove spaces and unnecessary tags

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -26,7 +26,7 @@
        </div>
 
     <footer>
-     <p>Author: Hanane ikhelef<br>
+     <p> Hanane ikhelef<br>
         <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a></p>
     </footer>
 
