--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -26,7 +26,7 @@
 
     <footer>
      <p> Hanane ikhelef<br>
-        <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a></p>
+        <a href="hananeikhelef@gmail.com">hananeikhelef@gmail.com</a></p>
     </footer>
 
   </body>
