Add content to projects page

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -1,33 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hanane ikhelef</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-      <div class="header"> 
-          <div class="inner_header">
-              <div class="logo_container"> 
-                <h1> <span> Welcome </span></h1>
-                  <ul class="navigation"> 
-                      <a href= "index.html"><li>  About </li></a>
-                      <a href= "projects.html"><li>  Projects </li></a>
-                      <a><li>  Contact </li></a>
-                  </ul>
-              </div>
-          </div>
-       </div>
-
-      <div id="content"> 
-           <p> Projects Page </p>
+   <head>
+      <meta charset="UTF-8">
+      <title>Hanane ikhelef</title>
+      <link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
+   </head>
+   <body>
+      <div class="header">
+         <div class="inner_header">
+            <div class="logo_container">
+               <h1> <span> Hanane ikhelef </span></h1>
+               <ul class="navigation">
+                  <a href= "index.html">
+                     <li>  About </li>
+                  </a>
+                  <a href= "projects.html">
+                     <li>  Projects </li>
+                  </a>
+                  <a>
+                     <li>  Contact </li>
+                  </a>
+               </ul>
+            </div>
+         </div>
       </div>
-
-    <footer>
-     <p> Hanane ikhelef<br>
-     <a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a></p>
-    </footer>
-
-  </body>
+      <div id="content">
+         <p> I have worked on diffrent projects and internships , here's some of my work </p>
+         <p> . Draw it :   is a school project, it's a drawing web application.  I used Angular and typescript and mainly SVG for the drawing tools</p>
+         <p> . Dummy robots : is a game realized during the 12th Ubisoft Creative Jam, i mainly used C# and Unity3D </p>
+         <div class="row">
+            <div class="column">
+               <div class="container">
+                  <img src="/images/hanane.jpeg" alt="Avatar" class="image">
+                  <a href="https://draw-it.augustinsangam.site/">
+                     <div class="overlay">
+                        <div class="text"> Draw It </div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+            <div class="column">
+               <div class="container">
+                  <img src="/images/hanane.jpeg" alt="Avatar" class="image" > 
+                  <a href="https://ges134.itch.io/dummy-robots">
+                     <div class="overlay">
+                        <div class="text"> Dummy Robots </div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+            <div class="column">
+               <div class="container">
+                  <img src="/images/hanane.jpeg" alt="Avatar" class="image" > 
+                  <a href="https://www.busbud.com/blog/my-internship-at-busbud-hanane-ikhelef/">
+                     <div class="overlay">
+                        <div class="text"> My internship at Busbud </div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="column">
+               <div class="container">
+                  <img src="/images/hanane.jpeg" alt="Avatar" class="image">
+                  <a href="https://github.com/hananeikhelef/step-my-portfolio">
+                     <div class="overlay">
+                        <div class="text"> STEP internship at Google </div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>
+      <footer>
+         <p> Hanane ikhelef<br>
+            <a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a>
+         </p>
+      </footer>
+   </body>
 </html>
