--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -32,7 +32,7 @@
          <div class="row">
             <div class="column">
                <div class="container">
-                  <img src="/images/hanane.jpeg" alt="Avatar" class="image">
+                  <img src="/images/draw.png" alt="Avatar" class="image">
                   <a href="https://draw-it.augustinsangam.site/">
                      <div class="overlay">
                         <div class="text"> Draw It </div>
@@ -42,7 +42,7 @@
             </div>
             <div class="column">
                <div class="container">
-                  <img src="/images/hanane.jpeg" alt="Avatar" class="image" > 
+                  <img src="/images/unity.png" alt="Avatar" class="image" > 
                   <a href="https://ges134.itch.io/dummy-robots">
                      <div class="overlay">
                         <div class="text"> Dummy Robots </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="column">
                <div class="container">
-                  <img src="/images/hanane.jpeg" alt="Avatar" class="image" > 
+                  <img src="/images/busbud.png" alt="Avatar" class="image" > 
                   <a href="https://www.busbud.com/blog/my-internship-at-busbud-hanane-ikhelef/">
                      <div class="overlay">
                         <div class="text"> My internship at Busbud </div>
