--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -26,9 +26,11 @@
          </div>
       </div>
       <div id="content">
-         <p> I have worked on diffrent projects and internships , here's some of my work </p>
-         <p> . Draw it :   is a school project, it's a drawing web application.  I used Angular and typescript and mainly SVG for the drawing tools</p>
-         <p> . Dummy robots : is a game realized during the 12th Ubisoft Creative Jam, i mainly used C# and Unity3D </p>
+         <p> I have worked on different projects and internships , here's some of my work </p>
+        <ul>
+            <li>Draw it :   is a school project, it's a drawing web application.  I used Angular and typescript and mainly SVG for the drawing tools</li>
+            <li>Dummy robots : is a game realized during the 12th Ubisoft Creative Jam, i mainly used C# and Unity3D</li>
+        </ul>
          <div class="row">
             <div class="column">
                <div class="container">
