--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,7 +38,7 @@
          <section>
          <h2>Skills</h2>
          <p>
-            On the Tech side, i worked more on web development using diffrent framworks and technologies. 
+            On the Tech side, i worked more on web development using different frameworks and technologies. 
          </p>
          <section>
             <h2>Hobbies</h2>
