--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,6 +33,7 @@
             <p> Hey !  I'm Hanane a software enginnering student at Polytechnique Montreal.
                Super passionate about software development.
                I previously interned at Busbud and now i'm intrening at Google. 
+               I previously interned at Busbud and now i'm interning at Google.
             </p>
          </section>
          <section>
@@ -46,7 +47,7 @@
                I enjoy volunteering whenever i have extra time especially in the tech field: 
             <ul>
                <li> I volunteered with AIESEC in egypt to teach Mathematics and french  </li>
-               <li> I am a memeber at the Women Tech Makers organization in Montreal </li>
+               <li> I am a member at the Women Tech Makers organization in Montreal </li>
                <li> I organize and plan hackathons in my school </li>
             </ul>
             </p>
@@ -56,7 +57,7 @@
          <p> Hanane ikhelef<br>
          <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a>
          </p>
-         <a href="https://www.linkedin.com/in/hanane-ikhelef-970714168/?trk=public_profile_samename_profile_profile-result-card_result-card_full-click&originalSubdomain=ca"><i class="fa fa-linkedin"></i></a>
+         <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
          <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a>
       </footer>
    </body>
