Add significant links

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -45,7 +45,7 @@
             <p>
                I enjoy volunteering whenever i have extra time especially in the tech field: 
             <ul>
-               <li> I volunteered with AIESEC in egypt to teach Mathematics and french  </li>
+               <li> I volunteered with <a href="http://aiesec.org.eg/">AIESEC </a> in egypt to teach Mathematics and french  </li>
                <li> I am a member at the Women Tech Makers organization in Montreal </li>
                <li> I organize and plan hackathons in my school </li>
             </ul>
@@ -54,7 +54,7 @@
       </div>
       <footer>
          <p> Hanane ikhelef<br>
-         <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a>
+            <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a>
          </p>
          <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
          <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a>
