Correct some typos & add some links

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -46,7 +46,7 @@
                I enjoy volunteering whenever i have extra time especially in the tech field: 
             <ul>
                <li> I volunteered with <a href="http://aiesec.org.eg/">AIESEC </a> in egypt to teach Mathematics and french  </li>
-               <li> I am a member at <a href="https://www.womentechmakers.com/"> the Women Tech Makers </a> organization in Montreal </li>
+               <li> I am a member at the  <a href="https://www.womentechmakers.com/"> Women Tech Makers </a> organization in Montreal </li>
                <li> I organize and plan hackathons in my school </li>
             </ul>
             </p>
