Add contact page

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -28,30 +28,21 @@
             </div>
          </div>
       </div>
-      <div id="content">
-         <section>
-            <h2>About me </h2>
-            <p> Hey !  I'm Hanane a software enginnering student at Polytechnique Montreal.
-               Super passionate about software development.
-               I previously interned at Busbud and now i'm interning at Google.
-            </p>
-         </section>
-         <section>
-         <h2>Skills</h2>
-         <p>
-            On the Tech side, i worked more on web development using different frameworks and technologies. 
-         </p>
-         <section>
-            <h2>Hobbies</h2>
-            <p>
-               I enjoy volunteering whenever i have extra time especially in the tech field: 
-            <ul>
-               <li> I volunteered with <a href="http://aiesec.org.eg/">AIESEC </a> in egypt to teach Mathematics and french  </li>
-               <li> I am a member at the  <a href="https://www.womentechmakers.com/"> Women Tech Makers </a> organization in Montreal </li>
-               <li> I organize and plan hackathons in my school </li>
-            </ul>
-            </p>
-         </section>
+      <div class="contact" id="contact">
+         <h2 onClick="toggleClass()">Get in touch with me or leave a comment   <span>+</span></h2>
+         <form>
+            <div class="row">
+               <div class="col-1">
+                  <label>Your Message</label>
+                  <textarea placeholder="Write your message here..."></textarea>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-1">
+                  <input type="submit" name="" value="Send message">
+               </div>
+            </div>
+         </form>
       </div>
       <footer>
          <p> Hanane ikhelef<br>
