--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -12,13 +12,14 @@
             <div class="logo_container">
                <h1> <span> Hanane ikhelef </span></h1>
                <ul class="navigation">
-                  <a href= "index.html">
+               <a href= "index.html">
                      <li>  About </li>
                   </a>
                   <a href= "projects.html">
                      <li>  Projects </li>
                   </a>
                   <a>
+                  <a href= "contact.html">
                      <li>  Contact </li>
                   </a>
                </ul>
