--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="style.css">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+      <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
       <script src="script.js"></script>
    </head>
    <body>
@@ -53,12 +55,27 @@
             </p>
          </section>
       </div>
+
       <footer>
-         <p> Hanane ikhelef<br>
-            <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a>
-         </p>
-         <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
-         <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a>
+          <div class="social-wrapper">
+        <ul id="footer">
+            <li>
+         <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a> 
+         </li>
+         <li ><a href="mailto:hege@example.com">hananeikhelef@gmail.com</a> </li>
+        <li class="w3-xlarge"> <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a> </li>
+       <li>  <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a> </li>
+
+    <div class="w3-padding w3-xlarge w3-teal">
+<i class="fab fa-github"></i>
+<i class="fa fa-search"></i>
+<i class="fa fa-cloud"></i>
+<i class="fa fa-trash"></i>
+Welcome!
+</div>
+        </ul>  
+        </div> 
+
       </footer>
    </body>
 </html>
