--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -14,9 +14,10 @@
             <div class="logo_container">
                <h1> <span> Hanane ikhelef  </span></h1>
                <ul class="navigation">
-                  <a href= "index.html">
-                     <li>  About </li>
-                  </a>
+                    <li>  About
+                        <a href= "index.html"> </a>
+                     </li>
+            
                   <a href= "projects.html">
                      <li>  Projects </li>
                   </a>
@@ -46,7 +47,7 @@
       </div>
       <footer>
          <p> Hanane ikhelef<br>
-            <a href="mailto:hege@example.com">hananeikhelef@gmail.com</a>
+            <a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a>
          </p>
          <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
          <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a>
