--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -12,7 +12,7 @@
       <div class="header">
          <div class="inner_header">
             <div class="logo_container">
-               <h1> <span> Hanane ikhelef  </span></h1>
+               <h1> <span> Hanane Ikhelef  </span></h1>
                <ul class="navigation">
                   <a href= "index.html">
                      <li>  About </li>
