--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -62,17 +62,12 @@
             <li>
          <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a> 
          </li>
-         <li ><a href="mailto:hege@example.com">hananeikhelef@gmail.com</a> </li>
-        <li class="w3-xlarge"> <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a> </li>
+         <li ><a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a> </li>
        <li>  <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a> </li>
 
     <div class="w3-padding w3-xlarge w3-teal">
-<i class="fab fa-github"></i>
-<i class="fa fa-search"></i>
-<i class="fa fa-cloud"></i>
-<i class="fa fa-trash"></i>
-Welcome!
-</div>
+        Welcome!
+    </div>
         </ul>  
         </div> 
 
