Fix the footer in the 3 pages

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -10,7 +10,7 @@
       <div class="header">
          <div class="inner_header">
             <div class="logo_container">
-               <h1> <span> Hanane ikhelef </span></h1>
+               <h1> <span> Hanane Ikhelef </span></h1>
                <ul class="navigation">
                <a href= "index.html">
                      <li>  About </li>
@@ -78,9 +78,18 @@
          </div>
       </div>
       <footer>
-         <p> Hanane ikhelef<br>
-          <a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a>
-         </p>
+         <div class="social-wrapper">
+            <ul id="footer">
+               <li>
+                  <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a> 
+               </li>
+               <li ><a href="mailto:hananeikhelef@gmail.com">hananeikhelef@gmail.com</a> </li>
+               <li>  <a href="https://github.com/hananeikhelef"><i class="fab fa-github"></i></a> </li>
+               <div class="w3-padding w3-xlarge w3-teal">
+                  Welcome!
+               </div>
+            </ul>
+         </div>
       </footer>
    </body>
 </html>
