--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -14,10 +14,9 @@
             <div class="logo_container">
                <h1> <span> Hanane Ikhelef  </span></h1>
                <ul class="navigation">
-                    <li>  About
-                        <a href= "index.html"> </a>
-                     </li>
-            
+                  <li>  About
+                     <a href= "index.html"> </a>
+                  </li>
                   <a href= "projects.html">
                      <li>  Projects </li>
                   </a>
@@ -44,6 +43,10 @@
                </div>
             </div>
          </form>
+         <div id="content">
+         </div>
+         <button onclick="getMessage()"> See other comments !</button>
+         <div id="message-container"></div>
       </div>
       <footer>
          <div class="social-wrapper">
