--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -43,9 +43,8 @@
                </div>
             </div>
          </form>
-         <div id="content">
-         </div>
-         <button onclick="getMessage()"> See other comments !</button>
+         <div id="content"> </div>
+         <button onclick="getMessage()">See other comments !</button>
          <div id="message-container"></div>
       </div>
       <footer>
