Add hard-coded comments

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -14,9 +14,9 @@
             <div class="logo_container">
                <h1> <span> Hanane Ikhelef  </span></h1>
                <ul class="navigation">
-                  <li>  About
-                     <a href= "index.html"> </a>
-                  </li>
+                  <a href= "index.html">
+                     <li>  About </li>
+                  </a>
                   <a href= "projects.html">
                      <li>  Projects </li>
                   </a>
@@ -44,7 +44,7 @@
             </div>
          </form>
          <div id="content"> </div>
-         <button onclick="getMessage()">See other comments !</button>
+         <button onclick="getStats() ">See other comments !</button>
          <div id="message-container"></div>
       </div>
       <footer>
