Change fucntion names

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -44,7 +44,7 @@
             </div>
          </form>
          <div id="content"> </div>
-         <button onclick="getStats() ">See other comments !</button>
+         <button onclick="getData() ">See other comments !</button>
          <div id="message-container"></div>
       </div>
       <footer>
