Add GET/POST requests

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -30,11 +30,11 @@
       </div>
       <div class="contact" id="contact">
          <h2 onClick="toggleClass()">Get in touch with me or leave a comment   <span>+</span></h2>
-         <form>
+         <form action="/data" method="POST">
             <div class="row">
                <div class="col-1">
                   <label>Your Message</label>
-                  <textarea placeholder="Write your message here..."></textarea>
+                  <textarea id="message" name="message" placeholder="Write your message here..."></textarea>
                </div>
             </div>
             <div class="row">
