--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -31,16 +31,10 @@
       <div class="contact" id="contact">
          <h2 onClick="toggleClass()">Get in touch with me or leave a comment   <span>+</span></h2>
          <div class="col-1">
-                  <label>Your email</label>
-                  <h1 onClick="comment()"><a id= "button"> Sign in   </a> </h1>
-                  <!-- <a id= "button2"> Sign out   </a> -->
+                <label>  <a id= "button"> Sign in   </a> </label>
              </div>
          <form action="/data" method="POST">
             <div class="row">
-               <!-- <div class="col-1">
-                  <label>Your email</label>
-                  <div id="sign-in">                   <textarea name="sign-in" placeholder="Write your email.."></textarea></div>
-               </div> -->
                  <div class="col-1">
                   <label>Your Message</label>
                   <textarea id="message" name="message" placeholder="Write your message here..."></textarea>
