Add map funciton

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,6 +54,10 @@
             </ul>
             </p>
          </section>
+         <section> 
+             <h1>Hello Google Maps</h1>
+             <div id="map"></div>
+         </section>
       </div>
       <footer>
          <div class="social-wrapper">
