--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
       <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
       <script src="script.js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAM-d9UNMuLrEPd9kRW7NfH7kL17k7njY"type="text/javascript"></script>
    </head>
    <body>
       <div class="header">
@@ -55,8 +56,10 @@
             </p>
          </section>
          <section> 
-             <h1>Hello Google Maps</h1>
+             <div>
+             <h1>You find me here ! </h1>
              <div id="map"></div>
+             </div>
          </section>
       </div>
       <footer>
